--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "when-dom-ready": "^1.2.12"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
+    "start": "react-app-rewired start --scripts-version react-scripts-ts",
+    "build": "react-app-rewired build --scripts-version react-scripts-ts",
+    "test": "react-app-rewired test --env=jsdom --scripts-version react-scripts-ts",
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
@@ -22,6 +22,10 @@
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.5",
+    "@types/webpack": "^4.4.8",
+    "immer": "^1.3.1",
+    "react-app-rewired": "^1.5.2",
+    "ts-node": "^7.0.0",
     "typescript": "^2.9.2"
   }
 }
