--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.4.1",
+    "@material-ui/icons": "^2.0.0",
+    "googleapis": "^32.0.0",
+    "loadjs": "^3.5.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.16.0",
+    "react.di": "^2.0.0",
     "redux": "^4.0.0",
+    "redux-observable": "^1.0.0",
+    "reflect-metadata": "^0.1.12",
+    "rxjs": "^6.2.2",
+    "tslib": "^1.9.3",
+    "typesafe-actions": "^2.0.4",
     "when-dom-ready": "^1.2.12"
   },
   "scripts": {
@@ -17,7 +27,9 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/gapi": "^0.0.36",
     "@types/jest": "^23.3.0",
+    "@types/loadjs": "^3.5.0",
     "@types/node": "^10.5.2",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
