--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "dependencies": {
     "@material-ui/core": "^1.4.1",
     "@material-ui/icons": "^2.0.0",
+    "classnames": "^2.2.6",
     "googleapis": "^32.0.0",
+    "immer": "^1.5.0",
     "loadjs": "^3.5.4",
+    "ramda": "^0.25.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.16.0",
     "react.di": "^2.0.0",
+    "recompose": "^0.27.1",
     "redux": "^4.0.0",
     "redux-observable": "^1.0.0",
     "reflect-metadata": "^0.1.12",
+    "reselect": "^3.0.1",
     "rxjs": "^6.2.2",
     "tslib": "^1.9.3",
     "typesafe-actions": "^2.0.4",
@@ -27,17 +32,22 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.6",
     "@types/gapi": "^0.0.36",
     "@types/jest": "^23.3.0",
     "@types/loadjs": "^3.5.0",
     "@types/node": "^10.5.2",
+    "@types/ramda": "^0.25.35",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.5",
+    "@types/recompose": "^0.26.2",
     "@types/webpack": "^4.4.8",
-    "immer": "^1.3.1",
+    "@types/webpack-merge": "^4.1.3",
+    "react-app-rewire-scss": "^1.0.2",
     "react-app-rewired": "^1.5.2",
     "ts-node": "^7.0.0",
-    "typescript": "^2.9.2"
+    "typescript": "^2.9.2",
+    "webpack-merge": "^4.1.3"
   }
 }
