--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.16.0",
+    "react-tiny-virtual-list": "^2.1.6",
     "react.di": "^2.0.0",
     "recompose": "^0.27.1",
     "redux": "^4.0.0",
@@ -37,6 +38,7 @@
     "@types/jest": "^23.3.0",
     "@types/loadjs": "^3.5.0",
     "@types/node": "^10.5.2",
+    "@types/prop-types": "^15.5.4",
     "@types/ramda": "^0.25.35",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
@@ -44,6 +46,7 @@
     "@types/recompose": "^0.26.2",
     "@types/webpack": "^4.4.8",
     "@types/webpack-merge": "^4.1.3",
+    "prop-types": "^15.6.2",
     "react-app-rewire-scss": "^1.0.2",
     "react-app-rewired": "^1.5.2",
     "ts-node": "^7.0.0",
