--- a/package.json
+++ b/package.json
@@ -30,7 +30,30 @@
     "start": "react-app-rewired start --scripts-version react-scripts-ts",
     "build": "react-app-rewired build --scripts-version react-scripts-ts",
     "test": "react-app-rewired test --env=jsdom --scripts-version react-scripts-ts",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "precommit": "lint-staged",
+    "prettier-js": "prettier --parser flow --write",
+    "prettier-ts": "prettier --parser typescript --write",
+    "prettier-css": "prettier --parser postcss --write"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all",
+    "semi": false
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "npm run prettier-js",
+      "git add"
+    ],
+    "*.{ts,tsx}": [
+      "npm run prettier-ts",
+      "git add"
+    ],
+    "*.{css,scss,less}": [
+      "npm run prettier-css",
+      "git add"
+    ]
   },
   "devDependencies": {
     "@types/classnames": "^2.2.6",
@@ -46,6 +69,9 @@
     "@types/recompose": "^0.26.2",
     "@types/webpack": "^4.4.8",
     "@types/webpack-merge": "^4.1.3",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.14.0",
     "prop-types": "^15.6.2",
     "react-app-rewire-scss": "^1.0.2",
     "react-app-rewired": "^1.5.2",
