--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
-    "react-scripts-ts": "2.16.0",
     "react-tiny-virtual-list": "^2.1.6",
     "react.di": "^2.0.0",
     "recompose": "^0.27.1",
@@ -27,10 +26,10 @@
     "when-dom-ready": "^1.2.12"
   },
   "scripts": {
-    "start": "react-app-rewired start --scripts-version react-scripts-ts",
-    "build": "react-app-rewired build --scripts-version react-scripts-ts",
-    "test": "react-app-rewired test --env=jsdom --scripts-version react-scripts-ts",
-    "eject": "react-scripts-ts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-scripts eject",
     "precommit": "lint-staged",
     "prettier-js": "prettier --parser flow --write",
     "prettier-ts": "prettier --parser typescript --write",
@@ -74,9 +73,24 @@
     "prettier": "^1.14.0",
     "prop-types": "^15.6.2",
     "react-app-rewire-scss": "^1.0.2",
+    "react-app-rewire-typescript": "^2.0.2",
     "react-app-rewired": "^1.5.2",
+    "react-scripts": "^2.0.0-next.3e165448",
     "ts-node": "^7.0.0",
     "typescript": "^2.9.2",
     "webpack-merge": "^4.1.3"
+  },
+  "browserslist": {
+    "development": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [
+      ">1%",
+      "last 4 versions",
+      "Firefox ESR",
+      "not ie < 11"
+    ]
   }
 }
