使用自己写的 webpack 配置完全替代 react-scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,10 @@
     "removeComments": false,
     "importHelpers": true
   },
+  "include": [
+    "src",
+    "configs"
+  ],
   "exclude": [
     "node_modules",
     "build",
