--- a/package.json
+++ b/package.json
@@ -26,10 +26,8 @@
     "when-dom-ready": "^1.2.12"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "TS_NODE_FILES=true TS_NODE_PROJECT=./configs/tsconfig.node.json node -r ts-node/register `yarn bin`/webpack-dev-server --progress --hot --inline --config ./configs/webpack.config.ts",
+    "build": "TS_NODE_FILES=true TS_NODE_PROJECT=./configs/tsconfig.node.json webpack -r ts-node/register --progress --config ./configs/webpack.config.ts",
     "precommit": "lint-staged",
     "prettier-js": "prettier --parser flow --write",
     "prettier-ts": "prettier --parser typescript --write",
@@ -56,7 +54,9 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.6",
+    "@types/clean-webpack-plugin": "^0.1.2",
     "@types/gapi": "^0.0.36",
+    "@types/html-webpack-plugin": "^3.2.0",
     "@types/jest": "^23.3.0",
     "@types/loadjs": "^3.5.0",
     "@types/node": "^10.5.2",
@@ -67,17 +67,24 @@
     "@types/react-redux": "^6.0.5",
     "@types/recompose": "^0.26.2",
     "@types/webpack": "^4.4.8",
+    "@types/webpack-dev-server": "^2.9.5",
     "@types/webpack-merge": "^4.1.3",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "prettier": "^1.14.0",
     "prop-types": "^15.6.2",
-    "react-app-rewire-scss": "^1.0.2",
-    "react-app-rewire-typescript": "^2.0.2",
-    "react-app-rewired": "^1.5.2",
-    "react-scripts": "^2.0.0-next.3e165448",
+    "sass": "^1.10.4",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.22.1",
+    "ts-loader": "^4.4.2",
     "ts-node": "^7.0.0",
     "typescript": "^3.0.1",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.3"
   },
   "browserslist": {
