--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^1.4.1",
-    "@material-ui/icons": "^2.0.0",
+    "@material-ui/core": "^1.4.3",
+    "@material-ui/icons": "^2.0.1",
     "classnames": "^2.2.6",
     "googleapis": "^32.0.0",
     "immer": "^1.5.0",
@@ -53,6 +53,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
     "@types/classnames": "^2.2.6",
     "@types/clean-webpack-plugin": "^0.1.2",
     "@types/gapi": "^0.0.36",
@@ -69,6 +71,8 @@
     "@types/webpack": "^4.4.8",
     "@types/webpack-dev-server": "^2.9.5",
     "@types/webpack-merge": "^4.1.3",
+    "babel-loader": "^8.0.0-beta",
+    "babel-plugin-transform-imports": "^1.5.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -83,6 +87,7 @@
     "ts-node": "^7.0.0",
     "typescript": "^3.0.1",
     "webpack": "^4.16.5",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.3"
