--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/recompose": "^0.26.2",
     "@types/webpack": "^4.4.8",
     "@types/webpack-dev-server": "^2.9.5",
+    "@types/webpack-env": "^1.13.6",
     "@types/webpack-merge": "^4.1.3",
     "babel-loader": "^8.0.0-beta",
     "babel-plugin-transform-imports": "^1.5.0",
@@ -80,6 +81,7 @@
     "lint-staged": "^7.2.0",
     "prettier": "^1.14.0",
     "prop-types": "^15.6.2",
+    "react-hot-loader": "^4.3.4",
     "sass": "^1.10.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
