--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "contacts",
+  "shortName": "contacts",
+  "fullName": "SimpleGoogleContacts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +10,7 @@
     "classnames": "^2.2.6",
     "googleapis": "^32.0.0",
     "immer": "^1.5.0",
+    "isbinaryfile": "^3.0.3",
     "loadjs": "^3.5.4",
     "ramda": "^0.25.0",
     "react": "^16.4.1",
@@ -57,6 +60,7 @@
     "@babel/preset-env": "^7.0.0-rc.1",
     "@types/classnames": "^2.2.6",
     "@types/clean-webpack-plugin": "^0.1.2",
+    "@types/copy-webpack-plugin": "^4.4.1",
     "@types/gapi": "^0.0.36",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/jest": "^23.3.0",
@@ -75,9 +79,11 @@
     "babel-loader": "^8.0.0-beta",
     "babel-plugin-transform-imports": "^1.5.0",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
+    "interpolate-webpack-plugin": "bolasblack/interpolate-webpack-plugin",
     "lint-staged": "^7.2.0",
     "prettier": "^1.14.0",
     "prop-types": "^15.6.2",
