--- a/package.json
+++ b/package.json
@@ -61,10 +61,13 @@
     "@types/classnames": "^2.2.6",
     "@types/clean-webpack-plugin": "^0.1.2",
     "@types/copy-webpack-plugin": "^4.4.1",
+    "@types/execa": "^0.9.0",
     "@types/gapi": "^0.0.36",
+    "@types/glob": "^5.0.35",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/jest": "^23.3.0",
     "@types/loadjs": "^3.5.0",
+    "@types/lodash": "^4.14.116",
     "@types/node": "^10.5.2",
     "@types/prop-types": "^15.5.4",
     "@types/ramda": "^0.25.35",
@@ -81,10 +84,14 @@
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
+    "event-hooks-webpack-plugin": "^2.1.0",
+    "execa": "^0.11.0",
+    "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "interpolate-webpack-plugin": "bolasblack/interpolate-webpack-plugin",
     "lint-staged": "^7.2.0",
+    "lodash": "^4.17.10",
     "prettier": "^1.14.0",
     "prop-types": "^15.6.2",
     "react-hot-loader": "^4.3.4",
