--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,11 +22,12 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "importHelpers": true
+    "importHelpers": true,
   },
   "include": [
     "src",
     "configs",
+    "scripts",
   ],
   "exclude": [
     "node_modules",
@@ -35,6 +36,6 @@
     "acceptance-tests",
     "webpack",
     "jest",
-    "src/setupTests.ts"
+    "src/setupTests.ts",
   ]
 }
